--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Tréninková videa</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
 <main class="container hero">
   <div class="hero-grid">
     <!-- INFORMAČNÍ OKÉNKO -->
