--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <span>Krátce a přehledně</span>
   </div>
 
-  <div class="grid one" style="grid-template-columns: repeat(2, 1fr);">
+  <div class="grid" style="grid-template-columns: repeat(2, 1fr);">
     <!-- TEXTOVÉ OKNO -->
     <div class="card hero-card">
       <div class="kicker"><span class="dot"></span> O této stránce</div>
