--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <iframe
           width="100%"
           height="100%"
-          src="https://www.youtube.com/embed/VIDEO_ID"
+          src="https://www.youtube.com/watch?v=U3f5zFSLgvo"
           title="Úvodní tréninkové video"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
