--- a/index.html
+++ b/index.html
@@ -65,14 +65,15 @@
         overflow:hidden;
         border:1px solid rgba(36,43,55,.9);
       ">
-        <iframe
-          width="100%"
-          height="100%"
-          src="https://www.youtube.com/watch?v=U3f5zFSLgvo"
-          title="Úvodní tréninkové video"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen></iframe>
+       <iframe
+      width="100%"
+      height="100%"
+      src="https://www.youtube.com/embed/u3f5zFSLgvo"
+      title="Úvodní tréninkové video"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen>
+    </iframe>
       </div>
 
       <p class="small" style="margin-top:10px">
