--- a/index.html
+++ b/index.html
@@ -55,26 +55,27 @@
       </div>
     </div>
 
-    <!-- HLAVNÍ VIDEO -->
-    <div class="card hero-card">
-
-      <div style="
-        margin-top:12px;
-        aspect-ratio:16/9;
-        border-radius:16px;
-        overflow:hidden;
-        border:1px solid rgba(36,43,55,.9);
-      ">
-       <iframe
+  <!-- HLAVNÍ VIDEO -->
+<div class="card hero-card">
+  <div style="
+    margin-top:12px;
+    aspect-ratio:16/9;
+    border-radius:16px;
+    overflow:hidden;
+    border:1px solid rgba(36,43,55,.9);
+  ">
+    <iframe
       width="100%"
       height="100%"
-      src="https://www.youtube.com/embed/u3f5zFSLgvo"
-      title="Úvodní tréninkové video"
+      src="https://www.youtube.com/embed/SFyag2GnH4w"
+      title="Úvodní video"
       frameborder="0"
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen>
     </iframe>
-      </div>
+  </div>
+</div>
+
 
       <p class="small" style="margin-top:10px">
         Vyměň <b>VIDEO_ID</b> za ID z YouTube odkazu.
