--- a/index.html
+++ b/index.html
@@ -50,38 +50,35 @@
       </div>
     </section>
 
-    <!-- HLAVNÍ VIDEO + FALLBACK -->
-    <section class="card hero-card">
-      <h3 style="margin:0 0 10px; font-size:18px;">Úvodní video</h3>
+   <!-- HLAVNÍ VIDEO (MP4) -->
+<section class="card hero-card">
+  <h3 style="margin:0 0 10px; font-size:18px;">Úvodní video</h3>
 
-      <div style="
-        aspect-ratio:16/9;
-        border-radius:16px;
-        overflow:hidden;
-        border:1px solid rgba(36,43,55,.9);
-        background:#000;
-      ">
-        <iframe
-          width="100%"
-          height="100%"
-          src="https://www.youtube.com/embed/SFyag2GnH4w"
-          title="Úvodní video"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen>
-        </iframe>
-      </div>
+  <div style="
+    aspect-ratio:16/9;
+    border-radius:16px;
+    overflow:hidden;
+    border:1px solid rgba(36,43,55,.9);
+    background:#000;
+  ">
+    <video
+      width="100%"
+      height="100%"
+      controls
+      preload="metadata"
+      poster=""
+      style="object-fit:cover;"
+    >
+      <source src="videos/uvodni-video.mp4" type="video/mp4">
+      Tvůj prohlížeč nepodporuje přehrávání videa.
+    </video>
+  </div>
 
-      <div class="small" style="margin-top:10px">
-        Pokud se video nezobrazí kvůli omezení YouTube, otevři ho přímo:
-      </div>
+  <p class="small" style="margin-top:10px">
+    Úvodní video k práci s tréninkovými materiály.
+  </p>
+</section>
 
-      <div class="actions" style="margin-top:10px">
-        <a class="btn" href="https://www.youtube.com/watch?v=SFyag2GnH4w" target="_blank" rel="noopener">
-          Otevřít na YouTube
-        </a>
-      </div>
-    </section>
   </div>
 </main>
 
