--- a/index.html
+++ b/index.html
@@ -49,35 +49,30 @@
         <a class="btn" href="kontakt.html">Napsat</a>
       </div>
     </section>
-
-   <!-- HLAVNÍ VIDEO (MP4) -->
+<!-- HLAVNÍ VIDEO (YouTube embed) -->
 <section class="card hero-card">
   <h3 style="margin:0 0 10px; font-size:18px;">Úvodní video</h3>
 
   <div style="
     aspect-ratio:16/9;
-    border-radius:16px;
+    border-radius:15px;
     overflow:hidden;
     border:1px solid rgba(36,43,55,.9);
     background:#000;
   ">
-    <video
-      width="100%"
-      height="100%"
-      controls
-      preload="metadata"
-      poster=""
-      style="object-fit:cover;"
-    >
-      <source src="videos/uvodni-video.mp4" type="video/mp4">
-      Tvůj prohlížeč nepodporuje přehrávání videa.
-    </video>
+    <iframe
+      src="https://www.youtube.com/embed/A6aIrD8NLlo"
+      style="width:100%; height:100%; border:0;"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      allowfullscreen>
+    </iframe>
   </div>
 
-  <p class="small" style="margin-top:10px">
+  <p class="small" style="margin-top:10px;">
     Úvodní video k práci s tréninkovými materiály.
   </p>
 </section>
+
 
   </div>
 </main>
