--- a/index.html
+++ b/index.html
@@ -34,8 +34,27 @@
       <h3 style="margin:0 0 8px; font-size:18px;">Jak to používat</h3>
 
       <p class="desc">
-        Tady si napiš libovolné info pro svěřence/rodiče (např. jak videa používat, jak často,
-        co je prioritní, případně odkazy na pravidla).
+        Jak kočička a pejsek chtěli být moc hodní
+
+Kočička a pejsek bydleli spolu v malém domečku u lesa. Měli tam čisto, teplo a každý večer si vařili něco dobrého. Jednoho dne si ale řekli, že budou nejhodnější na světě.
+
+„Když budeme hodní,“ řekla kočička, „tak nás budou mít všichni rádi.“
+
+„A dostaneme pamlsky,“ dodal pejsek.
+
+A tak se dali do hodnosti.
+
+Nejdřív chtěli uklidit les. Kočička zametala listí na hromádky, pejsek je nosil pryč. Jenže les byl velký a listí pořád padalo. Za chvíli byli oba celí unavení a les byl stejný jako předtím.
+
+Potom chtěli pomoct ptáčkům. Kočička jim chtěla dát mléko a pejsek kost. Ptáčci se na ně podívali, zakývali křídly a raději odletěli pryč.
+
+„Asi jsme to zase popletli,“ povzdechla si kočička.
+
+Nakonec se vrátili domů. Uvařili si čaj, sedli si ke kamnům a rozdělili se o poslední sušenku. A bylo jim spolu hezky.
+
+A právě tehdy pochopili, že být hodný neznamená dělat velké věci, ale dělat malé věci s radostí a spolu.
+
+A tak byli kočička a pejsek spokojení, i když nezametli celý les a nezachránili všechny ptáčky.
       </p>
 
       <div style="margin-top:12px" class="small">
@@ -46,7 +65,7 @@
 
       <div class="actions" style="margin-top:14px">
         <a class="btn primary" href="videa.html">Otevřít videa</a>
-        <a class="btn" href="kontakt.html">Napsat</a>
+        
       </div>
     </section>
 <!-- HLAVNÍ VIDEO (YouTube embed) -->
