--- a/videa.html
+++ b/videa.html
@@ -74,7 +74,47 @@
     </div>
 
     <!-- Přidáš další karty stejným způsobem -->
+  <!-- VIDEO KARTA -->
+    <div class="card video-card">
+      <a class="thumb" href="https://www.youtube.com/" target="_blank" rel="noopener">
+        <div class="play"><span>▶</span></div>
+      </a>
+      <h3>Sprint – startovní pozice</h3>
+      <p class="desc">Základní nastavení těla a první kroky po startu.</p>
+      <div class="meta">
+        <span class="pill blue">Rychlost</span>
+        <span class="pill">U13</span>
+        <span class="pill">0–5 min</span>
+      </div>
+    </div>
 
+    <!-- VIDEO KARTA -->
+    <div class="card video-card">
+      <a class="thumb" href="https://www.youtube.com/" target="_blank" rel="noopener">
+        <div class="play"><span>▶</span></div>
+      </a>
+      <h3>Překážky – rytmus a náběh</h3>
+      <p class="desc">Drilly na rytmus mezi překážkami a správný náběh.</p>
+      <div class="meta">
+        <span class="pill blue">Překážky</span>
+        <span class="pill">U15</span>
+        <span class="pill">5–12 min</span>
+      </div>
+    </div>
+
+    <!-- VIDEO KARTA -->
+    <div class="card video-card">
+      <a class="thumb" href="https://www.youtube.com/" target="_blank" rel="noopener">
+        <div class="play"><span>▶</span></div>
+      </a>
+      <h3>Core – stabilita pro běh</h3>
+      <p class="desc">Jednoduchá sestava na posílení trupu a stabilitu.</p>
+      <div class="meta">
+        <span class="pill blue">Síla</span>
+        <span class="pill">U13</span>
+        <span class="pill">5–12 min</span>
+      </div>
+    </div>
   </div>
 </main>
 
