--- a/kontakt.html
+++ b/kontakt.html
@@ -18,7 +18,7 @@
     <nav class="menu">
       <a href="index.html">Domů</a>
       <a href="videa.html">Videa</a>
-      <a class="active" href="kontakt.html">Kontakt</a>
+      <a class="active" href="kontakt.html">Kontakt & O mně</a>
     </nav>
   </div>
 </header>
