--- a/kontakt.html
+++ b/kontakt.html
@@ -25,26 +25,46 @@
 
 <main class="container section">
   <div class="section-title">
-    <h2>Kontakt</h2>
+    <h2>Kontakt & O mně</h2>
     <span>Dotazy, návrhy videí, spolupráce</span>
   </div>
 
-  <div class="grid">
-    <section class="card hero-card" style="grid-column:1/-1">
-      <h3>Napiš mi</h3>
-      <p class="desc">Doplň si kontaktní údaje. Doporučuji přidat i krátké pravidlo k používání videí (pro oddíl / pro rodiče).</p>
+  <div class="grid" style="grid-template-columns:1fr;">
+    
+    <!-- KONTAKT -->
+    <section class="card hero-card">
+      <h3>Kontakt</h3>
+      <p class="desc">
+        Máš dotaz, návrh videa nebo připomínku? Napiš mi.
+      </p>
 
       <div class="actions" style="margin-top:14px">
         <a class="btn primary" href="mailto:tvuj@email.cz">Odeslat e-mail</a>
         <a class="btn" href="videa.html">Přejít na videa</a>
       </div>
 
-      <div style="margin-top:14px" class="small">
-        Doporučení: Pokud budou videa jen pro určitou skupinu, dej sem upozornění a odkaz na pravidla.
+      <div class="small" style="margin-top:14px">
+        Doporučení: Pokud jsou videa jen pro určitou skupinu, uveď zde pravidla použití.
       </div>
     </section>
+
+    <!-- O MNĚ -->
+    <section class="card hero-card">
+      <h3>O mně</h3>
+      <p class="desc">
+        Jsem trenér / nadšenec do atletiky. Tento web slouží jako přehled
+        tréninkových videí pro práci se svěřenci (U13 / U15).
+      </p>
+
+      <p class="small" style="margin-top:10px">
+        Cílem je mít techniku, drill a inspiraci na jednom místě – přehledně
+        a bez zbytečného hledání.
+      </p>
+    </section>
+
   </div>
 </main>
+
 
 <footer class="footer">
   <div class="container">
