--- a/kontakt.html
+++ b/kontakt.html
@@ -49,18 +49,56 @@
     </section>
 
     <!-- O MNĚ -->
-    <section class="card hero-card">
-      <h3>O mně</h3>
+  <section class="card hero-card">
+  <h3>O mně</h3>
+
+  <div style="
+    display:flex;
+    gap:16px;
+    align-items:center;
+    margin-top:10px;
+    flex-wrap:wrap;
+  ">
+    <!-- Avatar -->
+    <div style="
+      width:90px;
+      height:90px;
+      border-radius:18px;
+      background:linear-gradient(135deg, var(--royal), var(--royal2));
+      display:grid;
+      place-items:center;
+      font-weight:800;
+      font-size:28px;
+      box-shadow:0 12px 24px rgba(42,91,255,.25);
+    ">
+      TK
+    </div>
+
+    <!-- Text -->
+    <div style="flex:1; min-width:220px">
       <p class="desc">
-        Jsem trenér / nadšenec do atletiky. Tento web slouží jako přehled
-        tréninkových videí pro práci se svěřenci (U13 / U15).
+        Trenér / atlet. Tento web slouží jako přehled tréninkových videí
+        pro práci se svěřenci (U13 / U15).
       </p>
 
-      <p class="small" style="margin-top:10px">
-        Cílem je mít techniku, drill a inspiraci na jednom místě – přehledně
-        a bez zbytečného hledání.
+      <p class="small" style="margin-top:8px">
+        Kompletní závodní výsledky a oficiální profil najdeš na atletika.cz.
       </p>
-    </section>
+    </div>
+  </div>
+
+  <div class="actions" style="margin-top:16px">
+    <a
+      class="btn primary"
+      href="https://online.atletika.cz/vysledky-atleta/0/10000007108"
+      target="_blank"
+      rel="noopener"
+    >
+      Zobrazit profil na atletika.cz
+    </a>
+  </div>
+</section>
+
 
   </div>
 </main>
