--- a/kontakt.html
+++ b/kontakt.html
@@ -89,13 +89,14 @@
 
   <div class="actions" style="margin-top:16px">
     <a
-      class="btn primary"
-      href="https://online.atletika.cz/vysledky-atleta/0/10000007108"
-      target="_blank"
-      rel="noopener"
-    >
-      Zobrazit profil na atletika.cz
-    </a>
+  class="btn red"
+  href="https://online.atletika.cz/vysledky-atleta/0/10000007108"
+  target="_blank"
+  rel="noopener"
+>
+  Karta atleta
+</a>
+
   </div>
 </section>
 
