--- a/kontakt.html
+++ b/kontakt.html
@@ -1,6 +1,17 @@
 <!doctype html>
 <html lang="cs">
 <head>
+  <script>
+  (function () {
+    const KEY = "site_unlocked_v1";
+    const isLoginPage = location.pathname.endsWith("login.html");
+
+    if (!isLoginPage && localStorage.getItem(KEY) !== "1") {
+      location.replace("login.html");
+    }
+  })();
+</script>
+
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Tréninková videa | Kontakt</title>
