--- a/login.html
+++ b/login.html
@@ -28,7 +28,7 @@
 
   <script>
     // ZMĚŇ SI HESLO:
-    const PASSWORD = "zmen-me-na-svoje-heslo";
+    const PASSWORD = "wasd1234";
     const KEY = "site_unlocked_v1";
 
     function unlock() {
