--- a/kontakt.html
+++ b/kontakt.html
@@ -30,6 +30,10 @@
       <a href="index.html">Domů</a>
       <a href="videa.html">Videa</a>
       <a class="active" href="kontakt.html">Kontakt & O mně</a>
+      <button id="logoutBtn" class="menu-link logout-btn" type="button">
+  Odhlásit
+</button>
+
     </nav>
   </div>
 </header>
@@ -125,6 +129,17 @@
 <script>
   document.getElementById("y").textContent = new Date().getFullYear();
 </script>
+  <script>
+  const logoutBtn = document.getElementById("logoutBtn");
+
+  if (logoutBtn) {
+    logoutBtn.addEventListener("click", () => {
+      localStorage.removeItem("site_unlocked_v1");
+      location.href = "login.html";
+    });
+  }
+</script>
+
 </body>
 </html>
 
