--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
     .err{margin-top:10px;color:#b00020;display:none}
   </style>
 </head>
-<body>
+<body class="login-page">
   <main class="container section">
     <div class="login-card">
       <h1>Přístup na stránku</h1>
