--- a/login.html
+++ b/login.html
@@ -17,6 +17,11 @@
 </head>
 <body class="login-page">
   <main class="container section">
+    <div class="login-title">
+  <h1>Tréninková videa</h1>
+  <p>skupiny Tomáše Kratochvíl</p>
+</div>
+
     <div class="login-card">
       <h1>Přístup na stránku</h1>
       <p>Zadej heslo pro zobrazení obsahu.</p>
