--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
   <main class="container section">
     <div class="login-title">
   <h1>Tréninková videa</h1>
-  <p>skupiny Tomáše Kratochvíl</p>
+  <h1>skupiny Tomáše Kratochvíl</h1>
 </div>
 
     <div class="login-card">
