--- a/login.html
+++ b/login.html
@@ -12,6 +12,25 @@
     .login-card input{width:100%;padding:12px;border-radius:10px;border:1px solid #ddd}
     .login-card button{margin-top:10px;width:100%;padding:12px;border-radius:10px;border:0;cursor:pointer}
     .err{margin-top:10px;color:#b00020;display:none}
+    .login-title {
+  text-align: center;
+  margin-bottom: 20px;
+  color: #fff;
+}
+
+.login-title h1 {
+  margin: 0;
+  font-size: 28px;
+  font-weight: 700;
+  letter-spacing: 0.5px;
+}
+
+.login-title p {
+  margin-top: 6px;
+  font-size: 15px;
+  opacity: 0.8;
+}
+
   </style>
 
 </head>
