--- a/login.html
+++ b/login.html
@@ -38,7 +38,7 @@
   <main class="container section">
     <div class="login-title">
   <h1>Tréninková videa</h1>
-  <h1>skupiny Tomáše Kratochvíl</h1>
+  <h1>skupiny Tomáše Kratochvíla</h1>
 </div>
 
     <div class="login-card">
