--- a/login.html
+++ b/login.html
@@ -18,18 +18,40 @@
   color: #fff;
 }
 
+.login-title {
+  text-align: center;
+  margin-bottom: 36px;
+  margin-top: -40px;
+  color: #fff;
+}
+
 .login-title h1 {
   margin: 0;
-  font-size: 28px;
-  font-weight: 700;
-  letter-spacing: 0.5px;
+  font-size: 44px;
+  font-weight: 800;
+  letter-spacing: 0.6px;
 }
 
 .login-title p {
-  margin-top: 6px;
-  font-size: 15px;
+  margin-top: 10px;
+  font-size: 18px;
   opacity: 0.8;
 }
+
+@media (max-width: 600px) {
+  .login-title {
+    margin-top: -20px;
+  }
+
+  .login-title h1 {
+    font-size: 32px;
+  }
+
+  .login-title p {
+    font-size: 16px;
+  }
+}
+
 
   </style>
 
