--- a/login.html
+++ b/login.html
@@ -20,17 +20,19 @@
 
 .login-title {
   text-align: center;
-  margin-bottom: 36px;
-  margin-top: -40px;
+  margin-bottom: 40px;   /* víc prostoru od login karty */
+  margin-top: -80px;    /* POSUN VÝRAZNĚ VÝŠ */
   color: #fff;
 }
 
+
 .login-title h1 {
   margin: 0;
-  font-size: 44px;
+  font-size: 52px;      /* ← ZVĚTŠENO */
   font-weight: 800;
-  letter-spacing: 0.6px;
+  letter-spacing: 0.8px;
 }
+
 
 .login-title p {
   margin-top: 10px;
@@ -40,17 +42,18 @@
 
 @media (max-width: 600px) {
   .login-title {
-    margin-top: -20px;
+    margin-top: -40px;
   }
 
   .login-title h1 {
-    font-size: 32px;
+    font-size: 36px;
   }
 
   .login-title p {
     font-size: 16px;
   }
 }
+
 
 
   </style>
