--- a/login.html
+++ b/login.html
@@ -2,6 +2,7 @@
 <html lang="cs">
 <head>
   <meta charset="utf-8" />
+  <link rel="icon" type="image/png" href="favicon.png">
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Přihlášení</title>
   <link rel="stylesheet" href="styles.css" />
