--- a/kontakt.html
+++ b/kontakt.html
@@ -13,6 +13,7 @@
 </script>
 
   <meta charset="utf-8" />
+  <link rel="icon" type="image/png" href="favicon.png">
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Tréninková videa | Kontakt</title>
   <link rel="stylesheet" href="styles.css" />
