--- a/login.html
+++ b/login.html
@@ -78,12 +78,39 @@
   </main>
 
   <script>
-    // ZMĚŇ SI HESLO:
-    const PASSWORDS = [
+   // ZMĚŇ SI HESLO:
+const PASSWORDS = [
   "wasd1234",
-  "tkratochvil"
-   
+  "tkratochvil",
+  "LBlechova",
+  "JBuzek",
+  "ECermakova",
+  "MDvorakova",
+  "SHlavacova",
+  "EJilkova",
+  "LKovacikova",
+  "AKubatova",
+  "OMackal",
+  "KMalechova",
+  "HMalikova",
+  "SMarikova",
+  "AMotzova",
+  "LNemejcova",
+  "KPachrova",
+  "NPitrova",
+  "LPlonerova",
+  "ERadova",
+  "DRezniecek",
+  "JSabo",
+  "MSellner",
+  "PSmetanova",
+  "LSuchy",
+  "MSitera",
+  "SSkurova",
+  "MTuslova",
+  "NWeis"
 ];
+
 
     const KEY = "site_unlocked_v1";
 
